# rs-vararg

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: attrs.rs  basic.rs
