[package]
name = "vararg"
version = "0.1.0"
authors = ["Alexey Ivushkin <ivushkinalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies.syn]
version = "1"
features = ["full", "extra-traits"]

[lib]
proc-macro = true
