[package]
name = "vararg"
version = "0.1.0"
authors = ["Alexey Ivushkin <ivushkinalex@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["vararg", "variadic", "macro", "proc-macro", "attribute"]
categories = ["development-tools"]
description = "vararg macro for creating variadic functions"
repository = "https://github.com/Morgan-iv/rs-vararg"
exclude = [".github/*"]

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies.syn]
version = "1"
features = ["full", "extra-traits"]

[lib]
proc-macro = true
